--- a/CachedController/Base.lproj/Main.storyboard
+++ b/CachedController/Base.lproj/Main.storyboard
@@ -1,13 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YK5-bR-QCr">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Programmatic-->
+        <scene sceneID="e9u-oP-fzd">
+            <objects>
+                <viewController id="oof-aI-pP0" customClass="ProgrammaticViewController" customModule="CachedController" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NYl-7J-ouf"/>
+                        <viewControllerLayoutGuide type="bottom" id="83P-Zx-7Lv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="smf-xC-THf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-hj-X5T">
+                                <rect key="frame" x="20" y="72" width="560" height="508"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">This will programmatically instantiate the web view controller the first time you call it, and the next time you call it, it will present the previously loaded view controller. Note, if this view controller is dismissed, we'll keep the web view in a `static` so that we don't lose it.
+
+Click the "Next" button above to see this in action. When you return to this screen, then click "Next" again and see the previously instantiated web view controller.
+
+If you use this technique, I'd suggest that you respond to memory warnings like I have here, purging the cached web view controller under memory pressure.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xM1-hj-X5T" firstAttribute="top" secondItem="NYl-7J-ouf" secondAttribute="bottom" constant="8" symbolic="YES" id="21e-jP-lgi"/>
+                            <constraint firstItem="xM1-hj-X5T" firstAttribute="trailing" secondItem="smf-xC-THf" secondAttribute="trailingMargin" id="PHI-YB-tn7"/>
+                            <constraint firstAttribute="bottom" secondItem="xM1-hj-X5T" secondAttribute="bottom" constant="20" symbolic="YES" id="goU-ae-jr7"/>
+                            <constraint firstItem="xM1-hj-X5T" firstAttribute="leading" secondItem="smf-xC-THf" secondAttribute="leadingMargin" id="tAn-xt-be8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Programmatic" id="lmS-5a-Yof">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="9qF-Dz-dfa">
+                            <connections>
+                                <action selector="didTapNextButton:" destination="oof-aI-pP0" id="h9O-Uf-A5d"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSV-5B-u1W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="334" y="352"/>
+        </scene>
+        <!--Web View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewViewController" id="BYZ-38-t0r" customClass="WebViewController" customModule="CachedController" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +63,166 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0PD-lK-Vow">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0PD-lK-Vow" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="1kx-uR-DLX"/>
+                            <constraint firstItem="0PD-lK-Vow" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="K0v-lG-Coh"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0PD-lK-Vow" secondAttribute="bottom" id="S0U-hk-Ozm"/>
+                            <constraint firstAttribute="trailing" secondItem="0PD-lK-Vow" secondAttribute="trailing" id="fWh-CU-4rX"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="0PD-lK-Vow" id="ykN-lP-Dv1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1092" y="756"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lEi-Zw-BS5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YK5-bR-QCr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EqM-xq-nrE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="z5E-wC-Rgh" kind="relationship" relationship="rootViewController" id="LH7-Fd-bA1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="haV-Je-Apg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1473" y="658"/>
+        </scene>
+        <!--Choose-->
+        <scene sceneID="yKJ-9l-mWs">
+            <objects>
+                <tableViewController id="z5E-wC-Rgh" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="fCa-TZ-lHy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="1SX-ic-TzD">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="FNK-Ii-HWS" style="IBUITableViewCellStyleDefault" id="wba-ca-EGV">
+                                        <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wba-ca-EGV" id="2Ul-lz-zTg">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Programmatic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FNK-Ii-HWS">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <segue destination="oof-aI-pP0" kind="show" id="cbj-Uk-W2L"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="IK7-4R-GeQ" style="IBUITableViewCellStyleDefault" id="NiK-PB-xjE">
+                                        <rect key="frame" x="0.0" y="108" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NiK-PB-xjE" id="kih-Ha-vLB">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Lazy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IK7-4R-GeQ">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <segue destination="Sdg-zw-gjN" kind="show" id="SXA-wI-TBz"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="z5E-wC-Rgh" id="uHK-FY-1X7"/>
+                            <outlet property="delegate" destination="z5E-wC-Rgh" id="6uJ-HL-sCr"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Choose" id="fIU-QX-lgl"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XC5-cD-AFI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-541" y="658"/>
+        </scene>
+        <!--Lazy-->
+        <scene sceneID="NIH-hn-gzb">
+            <objects>
+                <viewController id="Sdg-zw-gjN" customClass="LazyViewController" customModule="CachedController" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fAY-fW-F5b"/>
+                        <viewControllerLayoutGuide type="bottom" id="TaP-zk-JWE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Blj-8q-nbf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LLt-zn-jRn">
+                                <rect key="frame" x="20" y="72" width="560" height="508"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">This is a simpler approach, using a `lazy var`. This doesn't work in conjunction with `static`, and thus doesn't allow you to keep it after this view controller is dismissed. Likewise, you can't easily respond to memory pressure. But this does enjoy a certain elegant simplicity.
+
+Like before, click the "Next" button above to see this in action. When you return to this screen, then click "Next" again and see the previously instantiated web view controller.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="LLt-zn-jRn" secondAttribute="bottom" constant="20" symbolic="YES" id="CJB-9p-vch"/>
+                            <constraint firstItem="LLt-zn-jRn" firstAttribute="leading" secondItem="Blj-8q-nbf" secondAttribute="leadingMargin" id="Loe-Jd-S66"/>
+                            <constraint firstItem="LLt-zn-jRn" firstAttribute="top" secondItem="fAY-fW-F5b" secondAttribute="bottom" constant="8" symbolic="YES" id="MNb-Vc-3he"/>
+                            <constraint firstItem="LLt-zn-jRn" firstAttribute="trailing" secondItem="Blj-8q-nbf" secondAttribute="trailingMargin" id="vXz-EU-giM"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Lazy" id="CH5-hx-kBx">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="lfV-hx-Db0">
+                            <connections>
+                                <action selector="didTapNextButton:" destination="Sdg-zw-gjN" id="7Bt-Mt-Edm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s4G-K7-HSM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="334" y="1072"/>
         </scene>
     </scenes>
 </document>
